--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/googlemaps": "^3.37.7",
     "@types/jest": "^24.0.9",
     "@types/node": "^12.7.12",
     "jest": "^24.9.0",
@@ -22,8 +23,5 @@
   "jest": {
     "testEnvironment": "node",
     "preset": "ts-jest"
-  },
-  "dependencies": {
-    "@types/googlemaps": "^3.37.7"
   }
 }
